labs/lab25/solution/prometheus-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Use the host you used in your kubernetes Ingress Configurations
    - host: prometheus.example.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prometheus.apps.shaker242.lab
      secretName: prometheus-secret
